fixed marginbottom of div section so that when browser minimises, the content box doesnt get cut off

--- a/assets/styles/main-styles.css
+++ b/assets/styles/main-styles.css
@@ -60,7 +60,7 @@ height: 100%;
     margin-left: 20vw;
     margin-right: 20vw;
     margin-top: 60px;
-    margin-bottom: 10vh;
+    margin-bottom: 100px;
     display: flex;
     flex-wrap: wrap;
     
